--- a/src/app/components/nav-blank/nav-blank.component.html
+++ b/src/app/components/nav-blank/nav-blank.component.html
@@ -35,7 +35,7 @@
                     <a class="nav-link  p-2 mx-2 position-relative" routerLink="cart" routerLinkActive="active-link">
                         <i class="fas fa-cart-shopping fa-2xl"></i>
                         <span class=" badge bg-danger position-absolute top-0 end-0">
-                            {{countNumber}}
+                            {{countNumber()}}
                           </span> 
                     </a>
                     
